welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: '(' expected but '{' found.
  	else if{
               ^SlugHunting:12: error: illegal start of simple expression
}
^