welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    if (isFacingTrail==true){
      avance()
    }
  	else if{
      droite()
      if (isFacingTrain==true){
        avance()
      }
    }
}

def isFacingTrail():Boolean = {
  var green: Boolean=false
  
  if (estFaceMur()==false){
    avance()
    if (getCouleurSol()==Color.green){
      
      green= true
    }
    recule()
  }
  
  return green

}